--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,79 @@
-<p>about works!</p>
+<div class="parallax">
+  <div class="row justify-content-end align-items-center height-full  content-headline">
+    <div class="col-sm-12 col-md-9 col-lg-6 text-white">
+      <h2 class="headline-2">Procesul proiectarii interfeţelor</h2>
+    </div>
+  </div>
+</div>
+<div class="content about-content">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="card card-content">
+          <img
+            class="card-img-top"
+            src="https://res.cloudinary.com/hy4kyit2a/f_auto,fl_lossy,q_70/learn/modules/ux-research-basics/define_your_research_plan/images/baeb57d4127cb04529e06628c11ddeeb_define-your-research-plan-1.png"
+            alt="Card image cap">
+          <h5 class="card-title">Cercetarea utilizatorilor</h5>
+          <div class="card-body">
+            <p class="card-text">
+              Scopul este de a defini cine sunt clienții produsului și modul în care îl vor folosi. Trebuie explorat:
+            </p>
+            <ul>
+              <li>Nevoile, provocările și problemele utilizatorului</li>
+              <li>Tipuri de utilizatori, experiența lor, nivelul de cunoștințe și abilități;</li>
+              <li>Ce activități pot face folosind sistemul produsul</li>
+              <li>Contexte de utilizare pentru ceea ce proiectați.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="card card-content">
+          <img
+            class="card-img-top"
+            src="https://miro.medium.com/max/2960/1*oBDMtanZ-TZl12cuR6CfFg.png"
+            alt="Card image cap">
+          <h5 class="card-title">Proiectare</h5>
+          <div class="card-body">
+            <p class="card-text">
+              O modalitate bună este să pornești de la schițele simple, wireframes și mockups, să documentezi fiecare pas și
+              să continui cu machetele și prototipurile cât mai aproape de versiunea finală.
+              <br/>
+              Amplasarea corectă a elementelor de interfață crește capacitatea de utilizare a acestora,
+              face ca resursa să fie mai atractivă pentru utilizatori. În unele cazuri, cu ajutorul unui aspect competent al site-ului,
+              puteți convinge vizitatorii la anumite acțiuni.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="card card-content">
+          <img
+            class="card-img-top"
+            src="https://i1.wp.com/vocalprocess.co.uk/wp-content/uploads/2019/04/Fotolia_145026759_Subscription_Monthly_M.jpg?fit=1688%2C1125&ssl=1"
+            alt="Card image cap">
+          <h5 class="card-title">Evaluare</h5>
+          <div class="card-body">
+            <p class="card-text">După cum vedem, evaluarea ar trebui inclusă în toate etapele procesului de proiectare. Scopul principal
+              al etapei de evaluare este de a evalua calitatea unui design, nu în abstract, ci de modul în care acesta se potrivește
+              utilizatorilor, satisface nevoile lor și afișează toate caracteristicile produsului. De asemenea, ar trebui să identificăm
+              zonele care pot fi îmbunătățite și realizarea câtorva dintre ele.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr/>
+  </div>
+</div>
+<div class="parallax parallax-bg">
+  <div class="row justify-content-end align-items-center height-full  content-headline">
+    <div class="col-sm-12 col-md-10 col-lg-8 text-white">
+      <h2 class="headline-2">Tendințele de proiectare web</h2>
+    </div>
+  </div>
+</div>
+<div class="content about-content">
+  <div class="container">
+    <app-accordion-basic></app-accordion-basic>
+  </div>
+</div>
