--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,60 @@
-.navbar-brand {
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 11;
+.navbar-light {
+  @media (max-width: 991.98px) {
+    .navbar-collapse{
+      position: absolute;
+      top: 55px;
+      background: #fff;
+      left: 0;
+      z-index: 5;
+      width: 100%;
+      box-sizing: border-box;
+      padding: 10px;
+    }
+  }
+  .navbar-toggler {
+    width: 56px;
+    height: 40px;
+    .fas {
+      font-size: 33px;
+      position: relative;
+      top: -2px;
+    }
+  }
+  .navbar-nav {
+    .nav-link {
+      display: inline-block;
+      position: relative;
+      margin-right: 5px;
+      &::after{
+        content: " ";
+        display: block;
+        height: 1px;
+        width: 0;
+        position: absolute;
+        left: 0;
+        bottom: 3px;
+        background: #F7941D;
+        transition: width 0.5s;
+      }
+      &:hover,
+      &.active {
+        //background: red;
+        &::after {
+          width: 100%;
+        }
+      }
+    }
+  }
+  .navbar-brand {
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 11;
+  }
 }
 
+
 .page-footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   background: #fff;
 
