--- a/src/app/components/ngbd-carousel-pause/ngbd-carousel-pause.component.html
+++ b/src/app/components/ngbd-carousel-pause/ngbd-carousel-pause.component.html
@@ -2,7 +2,7 @@
   <ngb-carousel #carousel interval="10000" [pauseOnHover]="pauseOnHover" (slide)="onSlide($event)">
     <ng-template ngbSlide *ngFor="let img of images; index as i">
         <div class="picsum-img-wrapper">
-          <img [src]="img" alt="My image {{i + 1}} description">
+          <img class="full-height" [src]="img" alt="My image {{i + 1}} description">
         </div>
     </ng-template>
   </ngb-carousel>
