Add more pages and create build

--- a/src/app/components/hobbies/hobbies.component.html
+++ b/src/app/components/hobbies/hobbies.component.html
@@ -1,1 +1,94 @@
-<p>Tehnologii works!</p>
+<div class="parallax parallax-tehnologii">
+  <div class="row justify-content-end align-items-center height-full  content-headline">
+    <div class="col-sm-12 col-md-9 col-lg-6 text-white">
+      <h2 class="headline-2">Tehnologiile folosite</h2>
+    </div>
+  </div>
+</div>
+<div class="container my-4">
+  <div class="card-columns">
+    <div class="card p-3 mt-2 mb-3">
+      <img class="card-image" src="https://i1.wp.com/www.nuimedia.com/wp-content/uploads/2017/01/javascript-logo.png?ssl=1" alt="Angular 8">
+      <div class="card-header text-center">Javascript</div>
+      <div class="card-body">
+        <p>
+          Toata aplicatia este scrisa in Javascript, atat cod cat si server.
+        </p>
+      </div>
+    </div>
+    <div class="card p-3 mt-2 mb-3">
+      <img class="card-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRcwGrsUUdzimZkv3D3R46i0gMuz5u3ZYxrio3usumfa4PjpCPm" alt="Angular 8">
+      <div class="card-header text-center">HTML 5</div>
+      <div class="card-body">
+        <p>
+          Am folosit acest sistem pentru a-mi permite să fac modificarea aspectului paginilor web,
+          precum și să fac ajustări la aspectul acestora.
+        </p>
+      </div>
+    </div>
+    <div class="card p-3 mt-2 mb-3">
+      <img class="card-image" src="https://cdn.worldvectorlogo.com/logos/css3.svg" alt="Angular 8">
+      <div class="card-header text-center">CSS 3</div>
+      <div class="card-body">
+        <p>
+          Css3 mi-a permis să adaptez aplicația la diferite tipuri de dispozitive, cum ar fi ecrane
+          mari, ecrane mici sau imprimante.
+        </p>
+      </div>
+    </div>
+    <div class="card p-3 mt-2 mb-3">
+      <img class="card-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/1200px-Angular_full_color_logo.svg.png" alt="Angular 8">
+      <div class="card-header text-center">Angular 8</div>
+      <div class="card-body">
+        <p>
+          Am folosit cadrul Angular 8 pentru a crea această aplicație cu o singură pagină (single
+          page app).
+        </p>
+      </div>
+    </div>
+    <div class="card p-3 mt-2 mb-3 card-margin-bottom">
+      <img class="card-image" src="https://miro.medium.com/max/1200/1*yYN3pRB9mGS-IG_-agqDvA.png" alt="Express server with nodeJs">
+      <div class="card-header text-center">Express server cu nodeJs</div>
+      <div class="card-body">
+        <p>
+          Aplicația rulează pe un server nodejs, în mod special Expressjs. Am folosit serverul și
+          pentru deploy pe paginile github.
+        </p>
+      </div>
+    </div>
+    <div class="card p-3 mt-2 mb-3">
+      <img class="card-image" src="http://websnacks.net/wp-content/uploads/2015/05/Git.png" alt="github">
+      <div class="card-header text-center">Github</div>
+      <div class="card-body">
+        <p>Guithub-ul este folosit in acest proiect atat ca si sistem de versionare cat si ca
+          hosting.</p>
+      </div>
+    </div>
+    <div class="card p-3 mt-2 mb-3">
+      <img class="card-image" src="https://commons.bmstu.wiki/images/b/b8/Bootstrap.png" alt="Bootstrap">
+      <div class="card-header text-center">Bootstrap</div>
+      <div class="card-body">
+        <p>Am folosit ngBootstrap, ca Angular layer peste Bootstrap-ul normal pentru a mă ajuta să
+          proiectez aplicația web mai rapid și mai ușor.</p>
+      </div>
+    </div>
+    <div class="card p-3 mt-2 mb-3">
+      <img class="card-image" src="https://png.pngtree.com/svg/20170831/fe_sass_1368791.png" alt="Scss">
+      <div class="card-header text-center">Scss</div>
+      <div class="card-body">
+        <p>Scss este o extensie a CSS-ul care mi-a permis să folosesc variabile, nested rules,
+          inline imports, functions, etc. Ma ajutat și să lucrez mai organizat sau să scurtez timpul
+          de mențenantă.</p>
+      </div>
+    </div>
+    <div class="card p-3 mt-2 mb-3 card-margin-bottom">
+      <img class="card-image" src="http://kirthikamohan.com/images/icons/karma_jasmine.png" alt="Jasmine & Karma">
+      <div class="card-header text-center">Jasmine si Karma</div>
+      <div class="card-body">
+        <p>Jasmine este un testing framework care ma ajutat să scriu unit tests pentru aplicația mea de
+          Angular, iar Karma oferă instrumente utile care îmi facilitează apelarea testelor
+          Jasmine în timp ce scriam cod.</p>
+      </div>
+    </div>
+  </div>
+</div>
