--- a/src/app/components/ngbd-carousel-pause/ngbd-carousel-pause.component.html
+++ b/src/app/components/ngbd-carousel-pause/ngbd-carousel-pause.component.html
@@ -10,7 +10,7 @@
     <div class="container height-full">
       <div class="row justify-content-end align-items-center height-full">
         <div class="col-sm-12 col-md-9 col-lg-6 text-white">
-          <h3>Proiectarea interfeţelor utilizator</h3>
+          <h3>Informaţii despre proiectarea interfeţelor utilizator</h3>
         </div>
       </div>
     </div>
