--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,9 +23,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="technologies" (click)="toggleNavbar()" routerLinkActive="active">Tehnologi folosite</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="contact" (click)="toggleNavbar()" routerLinkActive="active">Contact și referințe</a>
-      </li>
+      <!--<li class="nav-item">-->
+        <!--<a class="nav-link" routerLink="contact" (click)="toggleNavbar()" routerLinkActive="active">Contact și referințe</a>-->
+      <!--</li>-->
     </ul>
   </div>
 
