--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,37 +2,70 @@
 body {
   overflow-x: hidden;
 }
+
 * {
   font-family: 'Poppins', sans-serif;
   outline: none;
-  &:focus{
+
+  &:focus {
     outline: none;
   }
 }
+
 .btn-link.hover, .btn-link:hover,
 .btn-link.focus, .btn-link:focus,
 a:hover {
   text-decoration: none;
 }
+
 a, button {
   cursor: pointer;
 }
-button:focus{
+
+button:focus {
   outline: none;
 }
+
 .hidden {
-  display: none!important;
+  display: none !important;
 }
+
 .fas {
   font-family: 'FontAwesome';
   font-style: normal;
 }
+
 .full-height {
   min-width: 100%;
   min-height: calc(100vh - 2 * 56px);
   max-height: calc(100vh - 2 * 56px);
 }
-.orange-link{
+
+.orange-link {
   color: #F7941D;
 }
 
+.orange-background {
+  background-color: #F7941D;
+}
+
+.parallax {
+  background-image: url("https://miro.medium.com/max/1000/1*P1iupOxk19t4v130e9ikhQ.png");
+  min-height: 40vh;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.content-headline {
+  min-height: 40vh;
+  overflow: hidden;
+  background-color: rgba(0,0,0,0.6);
+}
+
+@media (max-width: 767px) {
+  .headline-2 {
+    text-align: center;
+  }
+}
