detect logo by host

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
   </div>
 
   <a class="navbar-brand" routerLink="">
-    <img src="assets/logo.png" alt="Bogdana Zadic"/>
+    <img src="{{logo}}" alt="Bogdana Zadic"/>
   </a>
 </nav>
 
