--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
         <a class="nav-link" routerLink="about" (click)="toggleNavbar()" routerLinkActive="active">Informații</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="technologies" (click)="toggleNavbar()" routerLinkActive="active">Tehnologi folosite</a>
+        <a class="nav-link" routerLink="technologies" (click)="toggleNavbar()" routerLinkActive="active">Tehnologii folosite</a>
       </li>
       <!--<li class="nav-item">-->
         <!--<a class="nav-link" routerLink="contact" (click)="toggleNavbar()" routerLinkActive="active">Contact și referințe</a>-->
