--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,1 +1,24 @@
-<p>contact works!</p>
+<footer class="page-footer font-small blue">
+  <div class="content">
+    <div class="container container-footer">
+      <div class="row">
+        <div class="col-sm-10 col-md-5 col-lg-3">
+          Design & Development
+          <a href="https://www.linkedin.com/in/bogdanamonicazadic/" target="_blank" class="footer-link"> Bogdana Monica Zadic</a>
+        </div>
+        <div class="col-sm-10 col-md-5 col-lg-3">
+          Timisoara, Romania
+        </div>
+        <div class="col-sm-10 col-md-5 col-lg-3">
+          <a class="footer-link" href="tel:00407492939" title="Call me">+40749293943</a>
+          <br />
+          <a class="footer-link" href="mailto:bogdanazadic@gmail.com" title="Email me"> bogdanazadic@gmail.com</a>
+          <br />
+          <a class="footer-link" href="https://www.linkedin.com/in/bogdanamonicazadic" target="_blank" title="linkedIn">LinkedIn</a>
+          <br />
+          <a class="footer-link" href="https://github.com/BogdanaZ" target="_blank" title="github">GitHub</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
