--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,1 +1,3 @@
+<div class="container container-home full-container" id="scrollContainer">
 <app-ngbd-carousel-pause></app-ngbd-carousel-pause>
+</div>
