--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+:host {
+--easing-standard: cubic-bezier(0.4,0,0.2,1);
+}
 body {
   overflow-x: hidden;
 }
 
 * {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Comfortaa', cursive, 'Poppins', sans-serif;
+  //font-family: 'Poppins', sans-serif;
   outline: none;
 
   &:focus {
@@ -64,8 +68,41 @@ button:focus {
   background-color: rgba(0,0,0,0.6);
 }
 
+.ng-scrollbar-wrapper {
+  height: 100vh;
+}
+
+.full-container {
+  width: 100vh;
+  height: 100vh;
+  max-width: 100vw;
+  margin: 0;
+  min-width: 100vw;
+}
+.width-full {
+  max-width: 100%;
+}
+
 @media (max-width: 767px) {
   .headline-2 {
     text-align: center;
   }
+}
+.loader-container {
+  position: absolute;
+  background: #000;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  .loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 70px;
+    height: 70px;
+  }
+}
+.padding-bottom {
+  width: 100%;
+  height: 100px;
 }
