Add contact page and terms page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,9 +26,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="technologies" (click)="toggleNavbar()" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Tehnologii folosite</a>
       </li>
-      <!--<li class="nav-item">-->
-        <!--<a class="nav-link" routerLink="contact" (click)="toggleNavbar()" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Contact și referințe</a>-->
-      <!--</li>-->
+      <li class="nav-item">
+        <a class="nav-link" routerLink="contact" (click)="toggleNavbar()" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Contact și referințe</a>
+      </li>
     </ul>
   </div>
 </nav>
