--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,24 +1,181 @@
-<footer class="page-footer font-small blue">
-  <div class="content">
-    <div class="container container-footer">
-      <div class="row">
-        <div class="col-sm-10 col-md-5 col-lg-3">
-          Design & Development
-          <a href="https://www.linkedin.com/in/bogdanamonicazadic/" target="_blank" class="footer-link"> Bogdana Monica Zadic</a>
+<div class="content content-contact">
+  <div class="container">
+    <div *ngIf="!successfulSent && !errorEmails" class="form-container">
+      <form id="contact-form" [formGroup]="registerForm" (ngSubmit)="onSubmit($event)">
+        <p>Dragă scriitor,</p>
+        <p>Numele meu este
+          <input type="text" name="from_name" id="your-name" minlength="3" placeholder="(numele tău aici)" required
+                 formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }"/>
+          <span *ngIf="submitted && f.name.errors" class="invalid-feedback">
+            <span *ngIf="f.name.errors.required">Numele este obligatoriu</span>
+          </span>
+          și email-ul meu este
+          <input type="email" name="from_email" id="email" placeholder="(email-ul tău aici)" required
+                 formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
+          <span *ngIf="submitted && f.email.errors" class="invalid-feedback">
+            <span *ngIf="f.email.errors.required">Emailul este obligatoriu</span>
+          </span>
+        </p>
+        <p> Am un mesaj pentru tine,</p>
+        <p>
+          <textarea name="message_html" id="your-message" placeholder="(mesajul tău aici)" class="expanding" required
+                    formControlName="message" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.message.errors }"></textarea>
+          <span *ngIf="submitted && f.message.errors" class="invalid-feedback">
+            <span *ngIf="f.message.errors.required">Mesajul este obligatoriu</span>
+          </span>
+        </p>
+        <div class="form-group form-check">
+          <input type="checkbox" formControlName="acceptTerms" id="acceptTerms" class="form-check-input" [ngClass]="{ 'is-invalid': submitted && f.acceptTerms.errors }"/>
+          <label for="acceptTerms" class="form-check-label">Accept
+            <a class="terms" href="terms">
+              Termeni si conditii
+            </a></label>
+          <div *ngIf="submitted && f.acceptTerms.errors" class="invalid-feedback">Acceptarea
+            termenilor si conditiilor este obligatorie
+          </div>
         </div>
-        <div class="col-sm-10 col-md-5 col-lg-3">
-          Timisoara, Romania
-        </div>
-        <div class="col-sm-10 col-md-5 col-lg-3">
-          <a class="footer-link" href="tel:00407492939" title="Call me">+40749293943</a>
-          <br />
-          <a class="footer-link" href="mailto:bogdanazadic@gmail.com" title="Email me"> bogdanazadic@gmail.com</a>
-          <br />
-          <a class="footer-link" href="https://www.linkedin.com/in/bogdanamonicazadic" target="_blank" title="linkedIn">LinkedIn</a>
-          <br />
-          <a class="footer-link" href="https://github.com/BogdanaZ" target="_blank" title="github">GitHub</a>
+        <p>
+          <button type="Submit">
+            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 viewBox="0 0 345.834 345.834" style="enable-background:new 0 0 345.834 345.834;" xml:space="preserve">
+              <g>
+                <path d="M339.798,260.429c0.13-0.026,0.257-0.061,0.385-0.094c0.109-0.028,0.219-0.051,0.326-0.084
+                  c0.125-0.038,0.247-0.085,0.369-0.129c0.108-0.039,0.217-0.074,0.324-0.119c0.115-0.048,0.226-0.104,0.338-0.157
+                  c0.109-0.052,0.22-0.1,0.327-0.158c0.107-0.057,0.208-0.122,0.312-0.184c0.107-0.064,0.215-0.124,0.319-0.194
+                  c0.111-0.074,0.214-0.156,0.321-0.236c0.09-0.067,0.182-0.13,0.27-0.202c0.162-0.133,0.316-0.275,0.466-0.421
+                  c0.027-0.026,0.056-0.048,0.083-0.075c0.028-0.028,0.052-0.059,0.079-0.088c0.144-0.148,0.284-0.3,0.416-0.46
+                  c0.077-0.094,0.144-0.192,0.216-0.289c0.074-0.1,0.152-0.197,0.221-0.301c0.074-0.111,0.139-0.226,0.207-0.34
+                  c0.057-0.096,0.118-0.19,0.171-0.289c0.062-0.115,0.114-0.234,0.169-0.351c0.049-0.104,0.101-0.207,0.146-0.314
+                  c0.048-0.115,0.086-0.232,0.128-0.349c0.041-0.114,0.085-0.227,0.12-0.343c0.036-0.118,0.062-0.238,0.092-0.358
+                  c0.029-0.118,0.063-0.234,0.086-0.353c0.028-0.141,0.045-0.283,0.065-0.425c0.014-0.1,0.033-0.199,0.043-0.3
+                  c0.025-0.249,0.038-0.498,0.038-0.748V92.76c0-4.143-3.357-7.5-7.5-7.5h-236.25c-0.066,0-0.13,0.008-0.196,0.01
+                  c-0.143,0.004-0.285,0.01-0.427,0.022c-0.113,0.009-0.225,0.022-0.337,0.037c-0.128,0.016-0.255,0.035-0.382,0.058
+                  c-0.119,0.021-0.237,0.046-0.354,0.073c-0.119,0.028-0.238,0.058-0.356,0.092c-0.117,0.033-0.232,0.069-0.346,0.107
+                  c-0.117,0.04-0.234,0.082-0.349,0.128c-0.109,0.043-0.216,0.087-0.322,0.135c-0.118,0.053-0.235,0.11-0.351,0.169
+                  c-0.099,0.051-0.196,0.103-0.292,0.158c-0.116,0.066-0.23,0.136-0.343,0.208c-0.093,0.06-0.184,0.122-0.274,0.185
+                  c-0.106,0.075-0.211,0.153-0.314,0.235c-0.094,0.075-0.186,0.152-0.277,0.231c-0.09,0.079-0.179,0.158-0.266,0.242
+                  c-0.099,0.095-0.194,0.194-0.288,0.294c-0.047,0.05-0.097,0.094-0.142,0.145c-0.027,0.03-0.048,0.063-0.074,0.093
+                  c-0.094,0.109-0.182,0.223-0.27,0.338c-0.064,0.084-0.13,0.168-0.19,0.254c-0.078,0.112-0.15,0.227-0.222,0.343
+                  c-0.059,0.095-0.12,0.189-0.174,0.286c-0.063,0.112-0.118,0.227-0.175,0.342c-0.052,0.105-0.106,0.21-0.153,0.317
+                  c-0.049,0.113-0.092,0.23-0.135,0.345c-0.043,0.113-0.087,0.225-0.124,0.339c-0.037,0.115-0.067,0.232-0.099,0.349
+                  c-0.032,0.12-0.066,0.239-0.093,0.36c-0.025,0.113-0.042,0.228-0.062,0.342c-0.022,0.13-0.044,0.26-0.06,0.39
+                  c-0.013,0.108-0.019,0.218-0.027,0.328c-0.01,0.14-0.019,0.28-0.021,0.421c-0.001,0.041-0.006,0.081-0.006,0.122v46.252
+                  c0,4.143,3.357,7.5,7.5,7.5s7.5-3.357,7.5-7.5v-29.595l66.681,59.037c-0.348,0.245-0.683,0.516-0.995,0.827l-65.687,65.687v-49.288
+                  c0-4.143-3.357-7.5-7.5-7.5s-7.5,3.357-7.5,7.5v9.164h-38.75c-4.143,0-7.5,3.357-7.5,7.5s3.357,7.5,7.5,7.5h38.75v43.231
+                  c0,4.143,3.357,7.5,7.5,7.5h236.25c0.247,0,0.494-0.013,0.74-0.037c0.115-0.011,0.226-0.033,0.339-0.049
+                  C339.542,260.469,339.67,260.454,339.798,260.429z M330.834,234.967l-65.688-65.687c-0.042-0.042-0.087-0.077-0.13-0.117
+                  l49.383-41.897c3.158-2.68,3.546-7.412,0.866-10.571c-2.678-3.157-7.41-3.547-10.571-0.866l-84.381,71.59l-98.444-87.158h208.965
+                  V234.967z M185.878,179.888c0.535-0.535,0.969-1.131,1.308-1.765l28.051,24.835c1.418,1.255,3.194,1.885,4.972,1.885
+                  c1.726,0,3.451-0.593,4.853-1.781l28.587-24.254c0.26,0.38,0.553,0.743,0.89,1.08l65.687,65.687H120.191L185.878,179.888z"/>
+                <path d="M7.5,170.676h126.667c4.143,0,7.5-3.357,7.5-7.5s-3.357-7.5-7.5-7.5H7.5c-4.143,0-7.5,3.357-7.5,7.5
+                  S3.357,170.676,7.5,170.676z"/>
+                <path d="M20.625,129.345H77.5c4.143,0,7.5-3.357,7.5-7.5s-3.357-7.5-7.5-7.5H20.625c-4.143,0-7.5,3.357-7.5,7.5
+                  S16.482,129.345,20.625,129.345z"/>
+                <path d="M62.5,226.51h-55c-4.143,0-7.5,3.357-7.5,7.5s3.357,7.5,7.5,7.5h55c4.143,0,7.5-3.357,7.5-7.5S66.643,226.51,62.5,226.51z"
+                />
+              </g>
+            </svg>
+            <small>Trimite</small>
+          </button>
+          <button type="reset" (click)="onReset()">
+            <svg class="reset-svg" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 viewBox="0 0 294.843 294.843" style="enable-background:new 0 0 294.843 294.843;" xml:space="preserve">
+              <g>
+                <path d="M147.421,0C66.133,0,0,66.133,0,147.421s66.133,147.421,147.421,147.421c38.287,0,74.567-14.609,102.159-41.136
+                  c2.389-2.296,2.464-6.095,0.167-8.483c-2.295-2.388-6.093-2.464-8.483-0.167c-25.345,24.367-58.672,37.786-93.842,37.786
+                  C72.75,282.843,12,222.093,12,147.421S72.75,12,147.421,12s135.421,60.75,135.421,135.421c0,16.842-3.052,33.273-9.071,48.835
+                  c-1.195,3.091,0.341,6.565,3.432,7.761c3.092,1.193,6.565-0.341,7.761-3.432c6.555-16.949,9.879-34.836,9.879-53.165
+                  C294.843,66.133,228.71,0,147.421,0z"/>
+                <path d="M167.619,160.134c-2.37-2.319-6.168-2.277-8.485,0.09c-2.318,2.368-2.277,6.167,0.09,8.485l47.236,46.236
+                  c1.168,1.143,2.683,1.712,4.197,1.712c1.557,0,3.113-0.603,4.288-1.803c2.318-2.368,2.277-6.167-0.09-8.485L167.619,160.134z"/>
+                <path d="M125.178,133.663c1.171,1.171,2.707,1.757,4.243,1.757s3.071-0.586,4.243-1.757c2.343-2.343,2.343-6.142,0-8.485
+                  L88.428,79.942c-2.343-2.343-6.143-2.343-8.485,0c-2.343,2.343-2.343,6.142,0,8.485L125.178,133.663z"/>
+                <path d="M214.9,79.942c-2.343-2.343-6.143-2.343-8.485,0L79.942,206.415c-2.343,2.343-2.343,6.142,0,8.485
+                  c1.171,1.171,2.707,1.757,4.243,1.757s3.071-0.586,4.243-1.757L214.9,88.428C217.243,86.084,217.243,82.286,214.9,79.942z"/>
+              </g>
+            </svg>
+            <small>Resetare</small>
+          </button>
+        </p>
+      </form>
+    </div>
+    <div *ngIf="successfulSent" class="successful-container">
+      <img src="https://img.icons8.com/clouds/100/000000/sent.png" alt="Mesaj trimis"/>
+      <label class="text-message">Mesaj trimis</label>
+      <div class="mesaj">Dorim sa te anuntam ca am primit mesajul tau si in cel mai putin timp posibil iti vom raspunde</div>
+      <div class="replay-mesaj">Ai primit o confirmare si pe email.</div>
+      <button type="reset" (click)="onReset()" >
+        <svg class="reset-svg" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+             viewBox="0 0 294.843 294.843" style="enable-background:new 0 0 294.843 294.843;" xml:space="preserve">
+            <g>
+              <path d="M147.421,0C66.133,0,0,66.133,0,147.421s66.133,147.421,147.421,147.421c38.287,0,74.567-14.609,102.159-41.136
+                c2.389-2.296,2.464-6.095,0.167-8.483c-2.295-2.388-6.093-2.464-8.483-0.167c-25.345,24.367-58.672,37.786-93.842,37.786
+                C72.75,282.843,12,222.093,12,147.421S72.75,12,147.421,12s135.421,60.75,135.421,135.421c0,16.842-3.052,33.273-9.071,48.835
+                c-1.195,3.091,0.341,6.565,3.432,7.761c3.092,1.193,6.565-0.341,7.761-3.432c6.555-16.949,9.879-34.836,9.879-53.165
+                C294.843,66.133,228.71,0,147.421,0z"/>
+              <path d="M167.619,160.134c-2.37-2.319-6.168-2.277-8.485,0.09c-2.318,2.368-2.277,6.167,0.09,8.485l47.236,46.236
+                c1.168,1.143,2.683,1.712,4.197,1.712c1.557,0,3.113-0.603,4.288-1.803c2.318-2.368,2.277-6.167-0.09-8.485L167.619,160.134z"/>
+              <path d="M125.178,133.663c1.171,1.171,2.707,1.757,4.243,1.757s3.071-0.586,4.243-1.757c2.343-2.343,2.343-6.142,0-8.485
+                L88.428,79.942c-2.343-2.343-6.143-2.343-8.485,0c-2.343,2.343-2.343,6.142,0,8.485L125.178,133.663z"/>
+              <path d="M214.9,79.942c-2.343-2.343-6.143-2.343-8.485,0L79.942,206.415c-2.343,2.343-2.343,6.142,0,8.485
+                c1.171,1.171,2.707,1.757,4.243,1.757s3.071-0.586,4.243-1.757L214.9,88.428C217.243,86.084,217.243,82.286,214.9,79.942z"/>
+            </g>
+          </svg>
+        <small class="new_email">Trimite email nou</small>
+      </button>
+    </div>
+
+    <div *ngIf="errorEmails" class="error-container">
+      <img src="https://img.icons8.com/clouds/100/000000/error.png" alt="erroare-mesaj">
+      <label class="text-message">Mesaj nu a fost trimis</label>
+      <div>Ne pare rau.</div>
+      <div class="mesaj">S-a produs o eroare la serviciul de mesaje.</div>
+      <div class="replay-mesaj">Vom repara serviciul de trimite a emailurilor in cel mnai scurt timp posibil.</div>
+      <button type="reset" (click)="onReset()" >
+        <svg class="reset-svg" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+             viewBox="0 0 294.843 294.843" style="enable-background:new 0 0 294.843 294.843;" xml:space="preserve">
+            <g>
+              <path d="M147.421,0C66.133,0,0,66.133,0,147.421s66.133,147.421,147.421,147.421c38.287,0,74.567-14.609,102.159-41.136
+                c2.389-2.296,2.464-6.095,0.167-8.483c-2.295-2.388-6.093-2.464-8.483-0.167c-25.345,24.367-58.672,37.786-93.842,37.786
+                C72.75,282.843,12,222.093,12,147.421S72.75,12,147.421,12s135.421,60.75,135.421,135.421c0,16.842-3.052,33.273-9.071,48.835
+                c-1.195,3.091,0.341,6.565,3.432,7.761c3.092,1.193,6.565-0.341,7.761-3.432c6.555-16.949,9.879-34.836,9.879-53.165
+                C294.843,66.133,228.71,0,147.421,0z"/>
+              <path d="M167.619,160.134c-2.37-2.319-6.168-2.277-8.485,0.09c-2.318,2.368-2.277,6.167,0.09,8.485l47.236,46.236
+                c1.168,1.143,2.683,1.712,4.197,1.712c1.557,0,3.113-0.603,4.288-1.803c2.318-2.368,2.277-6.167-0.09-8.485L167.619,160.134z"/>
+              <path d="M125.178,133.663c1.171,1.171,2.707,1.757,4.243,1.757s3.071-0.586,4.243-1.757c2.343-2.343,2.343-6.142,0-8.485
+                L88.428,79.942c-2.343-2.343-6.143-2.343-8.485,0c-2.343,2.343-2.343,6.142,0,8.485L125.178,133.663z"/>
+              <path d="M214.9,79.942c-2.343-2.343-6.143-2.343-8.485,0L79.942,206.415c-2.343,2.343-2.343,6.142,0,8.485
+                c1.171,1.171,2.707,1.757,4.243,1.757s3.071-0.586,4.243-1.757L214.9,88.428C217.243,86.084,217.243,82.286,214.9,79.942z"/>
+            </g>
+          </svg>
+        <small class="new_email">Incearca din nou</small>
+      </button>
+    </div>
+
+    <footer class="page-footer font-small blue">
+      <div class="content">
+        <div class="container container-footer">
+          <div class="row">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+              Design & Development
+              <a href="https://www.linkedin.com/in/bogdanamonicazadic/" target="_blank" class="footer-link">
+                Bogdana Monica Zadic</a>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+              Timisoara, Romania
+              <br/>
+              <a class="footer-link" href="tel:00407492939" title="Call me">+40749293943</a>
+              <br/>
+              <a class="footer-link" href="mailto:bogdanazadic@gmail.com" title="Email me">
+                bogdanazadic@gmail.com</a>
+              <br/>
+              <a class="footer-link" href="https://www.linkedin.com/in/bogdanamonicazadic" target="_blank" title="linkedIn">LinkedIn</a>
+              <br/>
+              <a class="footer-link" href="https://github.com/BogdanaZ" target="_blank" title="github">GitHub</a>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
+    </footer>
   </div>
-</footer>
+</div>
