--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -73,6 +73,7 @@
         position: relative;
         margin-right: 5px;
         color: #fff;
+        padding-bottom: 1px;
         &::after{
           content: " ";
           display: block;
@@ -81,7 +82,7 @@
           position: absolute;
           left: 0;
           bottom: 3px;
-          background: #F7941D;
+          background: #fff;
           transition: width 0.5s;
         }
         &:hover,
