--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -5,7 +5,7 @@
   text-align: center;
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
-  padding-top: 20%;
+  padding-top: 100px;
   min-height: 100vh;
 }
 
